--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -3,7 +3,7 @@ import Box from '@cc/Box/index.astro'
 ---
 
 <Box padding=".25rem" borderWidth=".125rem">
-    <div class="stack">
+    <Box>
         <div class="cluster">
             <div class="pushRight"><button type="button">x</button></div>
             <h4>Dialouge Box</h4>
@@ -18,7 +18,7 @@ import Box from '@cc/Box/index.astro'
                 <button type="button">cancel</button>
             </div>
         </div>
-    </div>
+    </Box>
 </Box>
 
 <style>
