--- a/src/customComponents/Stack/index.astro
+++ b/src/customComponents/Stack/index.astro
@@ -4,7 +4,7 @@ import './Stack.css'
 type Props = {
     space?: string //"var(--s1)"
     recursive ?: boolean  //false
-    splitAfter?: number // no default
+    splitAfter?: number // no default. The element after which to split the stack with an auto margin
 }
 const props = Astro.props
 ---
