--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,9 +1,9 @@
 ---
 import type { CollectionEntry } from 'astro:content'
 import Box from '@cc/Box/index.astro'
-import BaseHead from '../components/BaseHead.astro'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
+// import BaseHead from '../components/BaseHead.astro'
+// import Header from '../components/Header.astro'
+// import Footer from '../components/Footer.astro'
 import FormattedDate from '../components/FormattedDate.astro'
 import Layout from '@layouts/SimpleLayout.astro'
 
