--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,6 @@ const {
 } = Astro.props
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-
 ---
 
 <html lang="en">
@@ -29,7 +28,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site)
         <GlobalStyle />
     </head>
 
-    <body color-scheme="light">
-        <slot></slot>
+    <body class="box-no-border" color-scheme="dark">
+        <slot />
     </body>
 </html>
