--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '@layouts/SimpleLayout.astro'
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
 
-import Box from '@cc/Box/index.astro'
+import { Box } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
