--- a/src/customComponents/Grid/index.astro
+++ b/src/customComponents/Grid/index.astro
@@ -1,9 +1,10 @@
 ---
 import './Grid.css'
+import type { RmUnitType } from '../Types.ts'
 
 interface Props {
-    min?: string //"250px"
-    space?: string //"var(--s1)"
+    min?: RmUnitType //"250px"
+    space?: RmUnitType //"var(--s1)"
     children: any
 }
 
