--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -11,7 +11,7 @@ import { Image } from 'astro:assets'
         space="var(--s2)"
         sideWidth="400px"
         contentMin="30%"
-        noStretch
+        noStretch={false}
         sideWidth="30ch"
     >
         <Image
