--- a/src/components/select-component.astro
+++ b/src/components/select-component.astro
@@ -3,6 +3,7 @@
     <option value="/demo/sidebar-demo">sidebar</option>
     <option value="/demo/switcher-demo">switcher-demo</option>
     <option value="/demo/grid-demo">grid-demo</option>
+    <option value="/demo/reel-demo">reel-demo</option>
 </select>
 
 <script>
