--- a/src/customComponents/Center/index.astro
+++ b/src/customComponents/Center/index.astro
@@ -1,14 +1,19 @@
 ---
 import './Center.css'
+import type { RmUnitType } from '../Types'
 
 type Props = {
-    max?: string
+    max?: RmUnitType
     andText?: boolean
     gutters?: boolean
     intrinsic?: boolean
-    
 }
-const { max = "var(--measure)", andText = false, gutters= 0, intrinsic=false} = Astro.props
+const {
+    max = 'var(--measure)',
+    andText = false,
+    gutters = 0,
+    intrinsic = false,
+} = Astro.props
 ---
 
 <center-l max={max} andText={andText} gutters={gutters} intrinsic={intrinsic}>
