--- a/src/customComponents/Frame/index.astro
+++ b/src/customComponents/Frame/index.astro
@@ -1,14 +1,34 @@
 ---
-import {type AstroAssets, Image } from 'astro:assets'
 import './Frame.css'
 
-
-
 type Props = {
-    ratio: '16:9' | '4:3' | '1:1' | '3:4' | '9:16' | '3:2' | '2:3' | '1:2' | '2:1' | '1:3' | '3:1' | '1:4' | '4:1' | '2:1' | '1:2' | '1:1' | '2:3' | '3:2' | '16:9' | '3:4' | '4:3' | '9:16';
+    ratio:
+        | '16:9'
+        | '4:3'
+        | '1:1'
+        | '3:4'
+        | '9:16'
+        | '3:2'
+        | '2:3'
+        | '1:2'
+        | '2:1'
+        | '1:3'
+        | '3:1'
+        | '1:4'
+        | '4:1'
+        | '2:1'
+        | '1:2'
+        | '1:1'
+        | '2:3'
+        | '3:2'
+        | '16:9'
+        | '3:4'
+        | '4:3'
+        | '9:16'
+    children: any
 }
 
-const { ratio }= Astro.props
+const { ratio } = Astro.props
 ---
 
 <frame-l ratio={ratio}>
