--- a/src/customComponents/Stack/index.astro
+++ b/src/customComponents/Stack/index.astro
@@ -1,9 +1,9 @@
 ---
 import './Stack.css'
-
+import type { RmUnitType } from '../Types'
 type Props = {
-    space?: string //"var(--s1)"
-    recursive ?: boolean  //false
+    space?: RmUnitType //"var(--s1)"
+    recursive?: boolean //false
     splitAfter?: number // no default. The element after which to split the stack with an auto margin
 }
 const props = Astro.props
