--- a/src/customComponents/Switcher/index.astro
+++ b/src/customComponents/Switcher/index.astro
@@ -1,9 +1,10 @@
 ---
 import './Switcher.css'
+import type { RmUnitType } from '../Types.ts'
 
 type Props = {
-    threshold?: string //"var(--measure)"
-    space?: string // "var(--s1)"
+    threshold?: RmUnitType //"var(--measure)"
+    space?: RmUnitType // "var(--s1)"
     limit?: number //limit = 4
 }
 const props = Astro.props
