--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
 
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+// import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
 
 import { Box } from '@cc/index.ts'
