--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -3,7 +3,7 @@ import { ViewTransitions } from 'astro:transitions'
 import GlobalStyle from '@styles/GlobalStyles.astro'
 import BaseHead from '../components/BaseHead.astro'
 import Cover from '@cc/Cover/index.astro'
-import Box from '@cc/Box/index.astro'
+
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
 
@@ -40,7 +40,7 @@ function capitalizeWords(str: string) {
     </head>
 
     <body color-scheme="light">
-        <Box borderWidth="0" padding="0">
+        <box-l borderWidth="0" padding="0">
             <Cover centeredElement="main" noPad={true} space="0">
                 <Header />
                 <main class="box">
@@ -50,6 +50,6 @@ function capitalizeWords(str: string) {
                 </main>
                 <Footer />
             </Cover>
-        </Box>
+        </box-l>
     </body>
 </html>
