--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -7,5 +7,5 @@ import Layout from '@layouts/SimpleLayout.astro'
 ---
 
 <Layout>
-    <Reel itemWidth="20rem"> <DummCards /></Reel>
+    <Reel itemWidth="20rem" noBar={false}> <DummCards /></Reel>
 </Layout>
