--- a/src/components/select-component.astro
+++ b/src/components/select-component.astro
@@ -4,6 +4,7 @@
     <option value="/demo/switcher-demo">switcher-demo</option>
     <option value="/demo/grid-demo">grid-demo</option>
     <option value="/demo/reel-demo">reel-demo</option>
+    <option value="/demo/imposter-demo">imposter-demo</option>
 </select>
 
 <script>
