--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,22 +3,12 @@ import Layout from '@layouts/SimpleLayout.astro'
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
-
-import { Box } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
-    <Box>
+    <box-l>
         <Dialogbox />
-    </Box>
+    </box-l>
 
     <!-- <Dialogbox /> -->
 </Layout>
-
-<style>
-    .mybg {
-        min-height: 5vh;
-        min-width: 10vw;
-        background-color: var(--surface1);
-    }
-</style>
