import modular layout custom components
use Box instead of box-l

--- a/src/components/select-component.astro
+++ b/src/components/select-component.astro
@@ -5,6 +5,7 @@
     <option value="/demo/grid-demo">grid-demo</option>
     <option value="/demo/reel-demo">reel-demo</option>
     <option value="/demo/imposter-demo">imposter-demo</option>
+    <option value="/demo/harmonic-demo">harmonic-demo</option>
 </select>
 
 <script>
