--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,24 +1,21 @@
 ---
 import type { CollectionEntry } from 'astro:content'
-import Box from '@cc/Box/index.astro'
+import { Box } from '@cc/index.ts'
 // import BaseHead from '../components/BaseHead.astro'
 // import Header from '../components/Header.astro'
 // import Footer from '../components/Footer.astro'
 import FormattedDate from '../components/FormattedDate.astro'
 import Layout from '@layouts/SimpleLayout.astro'
 
-  
 type Props = CollectionEntry<'blog'>['data']
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props
 ---
 
-
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
-    
-            <article>
-                <div class="stack">
-                    <Box>
+    <article>
+        <div class="stack">
+            <Box>
                 <div class="hero-image box">
                     {
                         heroImage && (
@@ -32,7 +29,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
                     }
                 </div>
                 <div class="prose box">
-                    <div class=" box">
+                    <div class="box">
                         <div class="date box">
                             <FormattedDate date={pubDate} />
                             {
@@ -44,7 +41,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
                                 )
                             }
                         </div>
-                       <div class="box"> <h3>{title}</h3></div>
+                        <div class="box"><h3>{title}</h3></div>
                         <hr />
                     </div>
                     <slot />
@@ -52,27 +49,21 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props
             </Box>
         </div>
     </article>
+</Layout>
 
-    </Layout>
+<style>
+    .hero-image img {
+        border-radius: 12px;
+        box-shadow: var(--box-shadow);
+    }
+    .prose {
+        color: rgb(var(--gray-dark));
+    }
 
-    <style>
-      
-       
-        .hero-image img {
- 
-            border-radius: 12px;
-            box-shadow: var(--box-shadow);
-        }
-        .prose {
-
-            color: rgb(var(--gray-dark));
-        }
-       
-        .date {
-     
-            color: rgb(var(--gray));
-        }
-        .last-updated-on {
-            font-style: italic;
-        }
-    </style>
+    .date {
+        color: rgb(var(--gray));
+    }
+    .last-updated-on {
+        font-style: italic;
+    }
+</style>
