--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,14 +1,171 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
 
-import { AstroGrid } from '@cc/index.ts'
+import { Image } from 'astro:assets'
 
-import DummCards from '@components/DummyCards.astro'
+import Card from '@components/Card.astro'
+
+import { Frame, Box, Stack, AstroGrid } from '@cc/index.ts'
+
+const W = 300
+const H = 200
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="test Me" description="Lorem ipsum dolor sit amet">
-    <AstroGrid min="calc(var(--measure) / 3)">
-        <DummCards />
+    <!-- space set the gap on the grid -->
+    <AstroGrid space="var(--s1)">
+        <Box
+            ><Stack>
+                <Card w={W} h={H} description="switcher" headline="">
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame>
+                </Card>
+                <Card w={W} h={H} description="switcher" headline="">
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame>
+                </Card>
+                <Card w={W} h={H} description="switcher" headline="">
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame>
+                </Card>
+            </Stack>
+        </Box>
+
+        <Box
+            ><Stack>
+                <Card w={W} h={H}>
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+        <Box
+            ><Stack>
+                <Card
+                    w={W}
+                    h={H}
+                    headline="BIG NEWS"
+                    description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
+                >
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+        <Box
+            ><Stack>
+                <Card
+                    w={W}
+                    h={H}
+                    description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
+                >
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+        <Box
+            ><Stack>
+                <Card w={W} h={H}>
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+
+        <Box
+            ><Stack>
+                <Card w={W} h={H}>
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+        <Box
+            ><Stack>
+                <Card
+                    w={W}
+                    h={H}
+                    headline="BIG NEWS"
+                    description="At the forefront of industry innovation, our paradigm-shifting ecosystem leverages synergistic partnerships to drive holistic growth. By harnessing the power of big data analytics and machine learning algorithms, we're redefining the boundaries of operational excellence. Our commitment to disruptive technologies ensures we stay ahead of the curve, delivering unparalleled value to our stakeholders."
+                >
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
+        <Box
+            ><Stack>
+                <Card
+                    w={W}
+                    h={H}
+                    description=`In today's fast-paced digital landscape, our mission is to empower clients through transformative solutions that integrate seamlessly with their core business processes. Our agile methodologies and customer-centric approach enable us to deliver bespoke innovations that are both scalable and sustainable. We're not just about the technology; we're about building lasting relationships that foster mutual success.`
+                >
+                    <Frame ratio="16:9" slot="image-slot">
+                        <Image
+                            width={W}
+                            height={H}
+                            src=`https://picsum.photos/${W}/${H}?random=${Math.floor(Math.random() * 1000)}`
+                            alt="Image alt text"
+                        />
+                    </Frame></Card
+                ></Stack
+            >
+        </Box>
     </AstroGrid>
 </Layout>
