--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-
+import AstroHeart from '@cc/HeartBtn.astro'
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
+import { Box } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
-    <box-l>
-        <Dialogbox />
-    </box-l>
+    <Box>
+        <AstroHeart /><AstroHeart /><AstroHeart />
+    </Box>
 
     <!-- <Dialogbox /> -->
 </Layout>
