--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -6,12 +6,12 @@ import { Box, Imposter } from '@cc/index.ts'
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="test Me" description="Lorem ipsum dolor sit amet">
     <Imposter>
-        <Box style="background-color: var(--color-light)">
+        <div style="background-color: var(--color-light)">
             <p class="h4">
                 <strong
                     >You can’t see all the content, because of this box.</strong
                 >
             </p>
-        </Box>
+        </div>
     </Imposter>
 </Layout>
