--- a/src/customComponents/Grid/index.astro
+++ b/src/customComponents/Grid/index.astro
@@ -1,6 +1,6 @@
 ---
 import './Grid.css'
-import type { RmUnitType } from '../Types.ts'
+import type { RmUnitType } from '../Types'
 
 interface Props {
     min?: RmUnitType //"250px"
