--- a/src/customComponents/Switcher/index.astro
+++ b/src/customComponents/Switcher/index.astro
@@ -1,6 +1,6 @@
 ---
 import './Switcher.css'
-import type { RmUnitType } from '../Types.ts'
+import type { RmUnitType } from '../Types'
 
 type Props = {
     threshold?: RmUnitType //"var(--measure)"
