--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -1,12 +1,11 @@
 ---
 import { ViewTransitions } from 'astro:transitions'
 import GlobalStyle from '@styles/GlobalStyles.astro'
-import BaseHead from '../components/BaseHead.astro'
-import Cover from '@cc/Cover/index.astro'
+import BaseHead from '@components/BaseHead.astro'
 
 import Header from '@components/Header.astro'
 import Footer from '@components/Footer.astro'
-import * as ModLayout from '@cc/index.ts'
+import { Box, Cover } from '@cc/index.ts'
 
 type Props = {
     title?: string
@@ -41,16 +40,18 @@ function capitalizeWords(str: string) {
     </head>
 
     <body color-scheme="light">
-        <ModLayout.Box borderWidth="0" padding="0">
-            <Cover centeredElement="main" noPad={true} space="0">
-                <Header />
-                <main class="box">
-                    <!-- <h2>{capitalizeWords(title)}</h2> -->
+        <div class="container">
+            <Box borderWidth="0" padding="0">
+                <Cover centeredElement="main" noPad={true} space="0">
+                    <Header />
+                    <main class="box">
+                        <!-- <h2>{capitalizeWords(title)}</h2> -->
 
-                    <slot />
-                </main>
-                <Footer />
-            </Cover>
-        </ModLayout.Box>
+                        <slot />
+                    </main>
+                    <Footer />
+                </Cover>
+            </Box>
+        </div>
     </body>
 </html>
