--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,25 @@ import Layout from '@layouts/SimpleLayout.astro'
 import AstroHeart from '@cc/HeartBtn.astro'
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 import Dialogbox from '@components/Dialouge.astro'
-import { Box } from '@cc/index.ts'
+import { Box, Icon } from '@cc/index.ts'
 ---
 
 <Layout title="home" description="testing css">
     <Box>
-        <AstroHeart /><AstroHeart /><AstroHeart />
+        <button>
+            <Icon space="var(--s0)">
+                <svg
+                    viewBox="0 0 10 10"
+                    width="0.75em"
+                    height="0.75em"
+                    stroke="currentColor"
+                    stroke-width="2"
+                >
+                    <line x1="1" y1="1" x2="9" y2="9"></line>
+                    <line x1="9" y1="1" x2="1" y2="9"></line>
+                </svg>Close
+            </Icon>
+        </button>
     </Box>
 
     <!-- <Dialogbox /> -->
