--- a/src/customComponents/Box/index.astro
+++ b/src/customComponents/Box/index.astro
@@ -7,10 +7,10 @@ type Props = {
     borderWidth?: RmUnitType //"var(--border-thin)"
     invert?: boolean // false
 }
-const { padding, borderWidth, invert, ...rest } = Astro.props
+const { padding, borderWidth, invert } = Astro.props
 ---
 
-<box-l padding={padding} {borderWidth} invert={invert} width="20px" {...rest}>
+<box-l padding={padding} {borderWidth} invert={invert} width="20px">
     <slot />
 </box-l>
 
