--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,17 +1,27 @@
 ---
 import Layout from '@layouts/SimpleLayout.astro'
-import { Box, Imposter } from '@cc/index.ts'
+import { Box, Imposter, Center } from '@cc/index.ts'
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="test Me" description="Lorem ipsum dolor sit amet">
-    <Imposter>
-        <div style="background-color: var(--color-light)">
-            <p class="h4">
-                <strong
-                    >You can’t see all the content, because of this box.</strong
-                >
-            </p>
+    <Imposter fixed breakout>
+        <div class="fill">
+            <Center>
+                <p class="h4">
+                    <strong
+                        >You can’t see all the content, because of this box.</strong
+                    >
+                </p>
+            </Center>
         </div>
     </Imposter>
 </Layout>
+
+<style>
+    .fill {
+        width: 80vw;
+        height: 80vh;
+        background-color: aqua;
+    }
+</style>
