--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -1,6 +1,6 @@
 ---
 import 'open-props/postcss/style'
-import 'open-props/postcss/buttons'
+
 import './layouts.css'
 ---
 
@@ -223,36 +223,6 @@ import './layouts.css'
 
     /* 
     ui */
-    .button {
-        display: inline-flex;
-        white-space: nowrap;
-
-        font-size: var(--font-size-fluid-1);
-        font-weight: var(--font-weight-7);
-
-        padding-inline: var(--size-6);
-        padding-block: var(--size-3);
-
-        color: var(--blue-9);
-        border: var(--border-size-2) solid var(--blue-5);
-        background-color: transparent;
-        border-radius: var(--radius-2);
-
-        &:is(:hover, :focus) {
-            cursor: pointer;
-            color: var(--blue-0);
-            background-color: var(--blue-5);
-
-            &.light & {
-                text-shadow: 0 1px 0 var(--blue-8);
-            }
-        }
-
-        &:active:not(:focus-visible) {
-            position: relative;
-            /*     inset-block-start: 2px; */
-        }
-    }
 
     .showcode {
         position: absolute;
@@ -325,6 +295,16 @@ import './layouts.css'
         /* ↓ Reposition so the center of the element
   is the center of the positioning container */
         transform: translate(-50%, -50%);
+    }
+
+    .appContainer {
+        container: myContainer / inline-size;
+    }
+
+    @container myContainer (width < 360px) {
+        .appContainer > * {
+            background-color: red;
+        }
     }
 
     /* .frame {
