--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -40,7 +40,7 @@ function capitalizeWords(str: string) {
     </head>
 
     <body color-scheme="light">
-        <div class="container">
+        <div class="appContainer">
             <Box borderWidth="0" padding="0">
                 <Cover centeredElement="main" noPad={true} space="0">
                     <Header />
